--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "booksmart",
   "version": "0.1.0",
-  "type": "module",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -21,7 +20,7 @@
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "express": "^4.18.2",
-    "next": "13.3.0",
+    "next": "^13.3.0",
     "openai": "^3.2.1",
     "postcss": "8.4.21",
     "react": "18.2.0",
