--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-simple-typewriter": "^5.0.1",
+    "sharp": "^0.32.1",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4"
   }
